# CortexCommon

./: .gitmodules  CMakeLists.txt
include/common/: connection.hpp  fs.hpp  log.hpp  network.hpp  protocol.hpp  repository.hpp  types.hpp
sources/: connection.cpp  protocol.cpp  repository.cpp
